@@ -1,3 +1,11 @@
+Tue Mar 22 14:31:19 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * tests/Bug_3942_Regression/Bug_3942_Regression.cpp:
+
+          Fuzz fixes and avoid compiler errors, even though they are
+          indicative of bugs in TAO.  At least one compiler accepts the
+          code and we can use the runtime failures on that compiler.
+
 Mon Mar 21 18:15:12 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/Stub.inl:
